# littlegrape-public

./: .dockerignore  .easignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json
services/ai-service/: .dockerignore  .env.example  .env.test.example  Dockerfile  pyproject.toml
services/ai-service/src/: main.py
services/ai-service/src/common/: enums.py
services/ai-service/src/config/: mem0_config.py  settings.py
services/ai-service/src/config/companions/: __init__.py  alex.py  companion_config.py  emma.py  jack.py  margaret.py  mia.py  mike.py  oliver.py  shared_rules.py  sophie.py
services/ai-service/src/config/prompts/: __init__.py  companion_prompts.py  difficulty_config.py  english_tips_prompts.py  notes_prompts.py  score_prompts.py  story_prompts.py  style_config.py  templates.py  tips_prompts.py  translation_prompts.py  variant_config.py  word_explanation_prompts.py
services/ai-service/src/config/scenarios/: __init__.py  custom_scenario_generator.py  free_conversation.py  prompt_generator.py
services/ai-service/src/config/stories/: __init__.py
services/ai-service/src/routers/: assistant.py  chat.py  classics.py  companion_mem0.py  exercise.py  grammar.py  reading.py  sentence.py  story.py  word_lookup.py  word_practice.py
services/ai-service/src/schemas/: __init__.py  assistant.py  chat.py  companion.py  companion_mem0.py  story.py
services/ai-service/src/services/: assistant_agent.py  companion_mem0_agent.py  english_coach.py  english_tips_agent.py  evaluation_agent.py  exercise_agent.py  grammar_agent.py  learn_assistant.py  notes_agent.py  reading_agent.py  score_agent.py  sentence_agent.py  tips_agent.py  translation_agent.py  word_explanation_agent.py  word_lookup_agent.py  word_practice_agent.py  word_practice_reviewer.py
services/ai-service/src/utils/: ai_helpers.py  datetime_utils.py  logger.py
services/ai-service/test/: agno_session_test.py  simple_chat.py  test_agno_history_context.py  test_agno_session.py  test_ai_coach_api.py  test_comprehensive_prompts.py  test_custom_scenario.py  test_dual_agent_prompts.py  test_evaluation_prompts_only.py  test_system_prompt.py
(+812 files in other folders)
